--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+/* <!-- Vendor CSS Files --> */
+@import '/assets/vendor/bootstrap/css/bootstrap.min.css';
+@import '/assets/vendor/bootstrap-icons/bootstrap-icons.css';
+@import '/assets/vendor/aos/aos.css';
+@import '/assets/vendor/glightbox/css/glightbox.min.css';
+@import '/assets/vendor/swiper/swiper-bundle.min.css';
+/*<!-- Template Main CSS File --> */
+@import '/assets/css/main.css';
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
