--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -498,7 +498,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 131, 116, 0.9);
+    background: rgb(0,0,0);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
